--- a/index.html
+++ b/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ur" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>Zafeer Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <title>مکتبہ الضحیٰ - ظفیر</title>
+  <style>
+    body {
+      font-family: 'Noto Nastaliq Urdu', serif;
+      background-color: #f8f8f8;
+      margin: 0;
+      padding: 20px;
+      line-height: 1.6;
+      color: #333;
+    }
+    header {
+      background-color: #2c3e50;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      border-radius: 10px;
+    }
+    section {
+      background-color: white;
+      margin: 20px 0;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #2980b9;
+    }
+    ul {
+      padding-right: 20px;
+    }
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      color: #555;
+    }
+  </style>
 </head>
 <body>
+
+<header>
   <h1>السلام علیکم، میں ظفیر ہوں</h1>
   <p>میں ایک Full Stack Developer اور سیکیورٹی کے شعبے میں سیکھنے والا ہوں۔</p>
+</header>
+
+<section>
+  <h2>📚 ہماری اسلامی کتب:</h2>
+  <ul>
+    <li>تفسیر ابن کثیر</li>
+    <li>صحیح بخاری</li>
+    <li>صحیح مسلم</li>
+    <li>ریاض الصالحین</li>
+    <li>فقہ الاسلامی</li>
+    <li>احکام القرآن</li>
+    <li>فضائل اعمال</li>
+    <li>اسلامی عقائد</li>
+    <li>قرآن مع ترجمہ</li>
+    <li>دعاؤں کی کتاب</li>
+  </ul>
+</section>
+
+<section>
+  <h2>🌸 ہمارے مشہور عطریات:</h2>
+  <ul>
+    <li>عود ہندی</li>
+    <li>عنبر</li>
+    <li>مکہ اسپیشل</li>
+    <li>سندور</li>
+    <li>سفید مشک</li>
+    <li>بلو اوشن</li>
+    <li>روز عطر</li>
+    <li>دیودار</li>
+    <li>کشمیر گلاب</li>
+    <li>مسک اللیل</li>
+  </ul>
+</section>
+
+<section>
+  <h2>📍 رابطہ معلومات:</h2>
+  <p><strong>ادارہ:</strong> مکتبہ الضحیٰ، پَلندری</p>
+  <p><strong>موبائل:</strong> 0348 5202559</p>
+</section>
+
+<footer>
+  &copy; 2025 مکتبہ الضحیٰ - ظفیر
+</footer>
+
 </body>
 </html>
